testcases/error/unused_variable.veryl
module unused_variable {
    let a: logic = 1;
}
